--- a/ddd-cargo-maven-module-example/cargo-infrastructure/pom.xml
+++ b/ddd-cargo-maven-module-example/cargo-infrastructure/pom.xml
@@ -48,5 +48,12 @@
             <artifactId>cargo-api</artifactId>
             <version>${parent.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
