--- a/ddd-cargo-maven-module-example/cargo-start/src/main/resources/application.properties
+++ b/ddd-cargo-maven-module-example/cargo-start/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.devtools.restart.enabled=false
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ddd-sayi-db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=passw0rd
 
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 
