add domain event publisher

--- a/ddd-cargo-maven-module-example/cargo-start/src/main/resources/application.properties
+++ b/ddd-cargo-maven-module-example/cargo-start/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8077
-
+# 选择是否以web启动
+spring.main.web-application-type=servlet
 spring.devtools.restart.enabled=false
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ddd-sayi-db?useUnicode=true&characterEncoding=UTF-8
